# aoc-zen-runner

./: Cargo.toml
aoc-runner-macros/: Cargo.toml
aoc-runner-macros/src/: lib.rs
aoc-zen-runner-macros/: Cargo.toml
cargo-ext/: Cargo.toml
runner/: CHANGELOG.md  Cargo.toml
sample/2022/: Cargo.toml
src/: day04.rs
zen-aoc-cargo-ext/: Cargo.toml
zen-aoc-cargo-ext/src/: cli.rs  main.rs  traits.rs
zen-aoc-cargo-ext/src/commands/: bench.rs  credentials.rs  flamegraph.rs  input.rs  mod.rs  prep.rs  run.rs  scaffold.rs
zen-aoc-macros/: Cargo.toml
