[package]
name = "aoc-runner-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
anyhow = { version = "1.0.68"}
proc-macro2 = { version = "1.0.47", features = ["span-locations"] }
quote = "1.0.21"
syn = { version = "1.0.105", features = ["full", "extra-traits", "fold", "visit", "visit-mut", "parsing", "proc-macro"] }
thiserror = "1.0.38"
