[package]
name = "aoc-zen-runner-macros"
version = "0.1.7"
edition = "2021"
repository = "https://github.com/proegssilb/aoc-zen-runner"
homepage = "https://github.com/proegssilb/aoc-zen-runner"
documentation = "https://github.com/proegssilb/aoc-zen-runner"
readme = "../README.md"
license = "Apache-2.0"
description = "Macros for aoc-zen-runner."
categories = ["command-line-utilities", "development-tools::cargo-plugins", ]
keywords = ["advent-of-code", "aoc"]

[lib]
proc-macro = true

[dependencies]
anyhow = { version = "1.0.79"}
proc-macro2 = { version = "1.0.79", features = ["span-locations"] }
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full", "extra-traits", "fold", "visit", "visit-mut", "parsing", "proc-macro"] }
thiserror = "1.0.57"
microbench = "0.5.0"
num-format = { version = "0.4.4", features = ["with-system-locale"] }
criterion =  { version = "0.5.1", features = ["rayon", "plotters", "cargo_bench_support", "html_reports"]}
plotters = "0.3.5"
cargo_metadata = "0.18.1"
