[package]
name = "cargo-aoc-zen-runner"
version = "0.3.6"
edition = "2021"
repository = "https://github.com/proegssilb/aoc-zen-runner"
homepage = "https://github.com/proegssilb/aoc-zen-runner"
documentation = "https://github.com/proegssilb/aoc-zen-runner"
readme = "../README.md"
license = "Apache-2.0"
description = "An Advent of Code runner aiming to streamline a variety of repository layouts and tasks."
categories = ["command-line-utilities", "development-tools::cargo-plugins", ]
keywords = ["advent-of-code", "aoc"]

[lib]
name = "aoc_zen_runner"
path = "src/lib.rs"


[[bin]]
name="cargo-aoc"
path="src/main.rs"

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
cargo_metadata = "0.18.1"
chrono = "0.4.34"
chrono-tz = "0.8.6"
clap = { version = "4.5.0", features = ["derive", "cargo", "env", "unicode", "string"] }
directories = "5.0.1"
liquid = "0.26.4"
regex = "1.10.3"
reqwest = { version = "0.12.0", features = ["blocking", "cookies", "gzip", "brotli", "deflate"] }
serde = { version = "1.0.196", features = ["derive", "serde_derive"] }
serde_derive = "1.0.196"
thiserror = "1.0.57"
toml_edit = "0.22.5"
trycmd = { version = "0.15.0", features = [] }
