[package]
name = "zen-aoc-cargo-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cargo-aoc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive", "env", "unicode", "cargo", "wrap_help"] }
thiserror = "1.0.38"
