[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "2022-day1"
path = "src/day1.rs"

[[bin]]
name = "2022-day2"
path = "src/day2.rs"

[[bin]]
name = "2022-day3"
path = "src/day3.rs"

[[bin]]
name = "2022-day4"
path = "src/day4.rs"

[[bin]]
name = "2022-day5"
path = "src/day5.rs"

[[bin]]
name = "2022-day6"
path = "src/day6.rs"

[dependencies]
aoc-zen-runner-macros = {path = "../../aoc-zen-runner-macros"}
microbench = "0.5.0"
criterion = "0.5.1"
pprof = { version = "0.13.0", features = ["flamegraph", "protobuf", "criterion"] }
bit-set = "0.5.3"
grid = "0.13.0"
gridly_grids = "0.5.0"
itertools = "0.13.0"
petgraph = "0.6.4"
rayon = "1.8.1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
termion = "3.0.0"
